# Dataops--GYM

./: .dataops_policy_cache.json  .dockerignore  Dockerfile  README.md  env.py  grader.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  task.py
server/: __init__.py  app.py
utils/: __init__.py  helpers.py
