[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dataops-env"
version = "1.0.0"
description = "Multi-step enterprise data cleaning OpenEnv environment."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "numpy",
    "openenv-core>=0.2.0",
    "openai",
    "pydantic",
    "uvicorn",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
py-modules = ["env", "grader", "inference", "models", "task"]
